# BipolarExplorerMNE

./: Pipfile  README.md  pyproject.toml
.github/workflows/: release.yml
