[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name="bipolar-explorer-mne",  # This is the pip install name
dynamic=["version"]
readme="README.md"
License= "LICENSE"
description="A tool for exploring bipolar montages in MNE files."
authors = {name = "Ana Sofia Carmo", email = "anascacais"}
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies=[
    "mne",
    "matplotlib",
    "numpy"
]

[project.url]
repository="https://github.com/anascacais/BipolarExplorerMNE"

[tool.setuptools.dynamic]
version = {attr = "bipolar_explorer_mne.__version__:__version__"}

[tool.setuptools.packages.find]
